ops/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: l4h
  labels:
    name: l4h
    environment: production
